2021-03-12  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): reducing the total timeout by each execution
	* check_ssl_cert (check_ocsp): looping over all the supplied URIs

2021-03-11  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Setting GZIP to quiet (-q) before using man

2021-03-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Improved renegotiation testing
	* check_ssl_cert (fetch_certificate): Added --password to specify a password source for PCKS12 certificates

2021-03-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Added missing processing of the --inetproto option
	* check_ssl_cert (main): Added a sanity check for the protocol support of s_client
	* check_ssl_cert (check_ocsp): skipping empty certificates
	* check_ssl_cert (fetch_certificate): supporting local files in PKCS #12 and DER formats
	* check_ssl_cert (main): Using grep -F when possible

2021-02-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Do not check SCTs if the certificate is self signed

2021-02-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): fixed the SCT check

2021-02-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Check for TLS renegotiation

2021-02-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Do not reset $OPENSSL so that a different
                                 OpenSSL version can be specified with the environment variable

2021-02-17  Robin Pronk  <robin.pronk@nedap.com>

	* check_ssl_cert: Make HTTP request url configurable (default stays /)

2021-02-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Adds a check for grep (to check if basic utilities are in the PATH)

2021-01-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Checks for signed certificate timestamps (SCTs)
	* check_ssl_cert (fetch_certificate): Better error catching for s_client errors

2021-01-26  Matteo Corti  <matteo@corti.li>
