@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii check_ssl_cert.1
 .\"
-.TH "check_ssl_cert" 1 "March, 2021" "1.142.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "March, 2021" "1.143.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -23,6 +23,12 @@ ignore authority warnings (expiration only)
 .TP
 .BR "   --altnames"
 matches the pattern specified in -n with alternate names too
+.TP
+.BR "   --check-ciphers" " grade"
+checks the offered ciphers
+.TP
+.BR "   --check-ciphers-warnings"
+critical if nmap reports a warning for an offered cipher
 .TP
 .BR "-C,--clientcert" " path"
 use client certificate to authenticate
