@@ -1,4 +1,5 @@
-Better handling of the timeout
+2021-03-12 Version 1.143.0: Better handling of the timeout
+                            Checks ciphers with nmap (--check-ciphers and --check-ciphers-warnings)
                             Checks oll the supplied OCSP URIs
 2021-03-10 Version 1.142.0: Improved the TLS renegotiation check
                             Added --password to specify a password source for PCKS12 certificates
