@@ -1,6 +1,8 @@
 2021-03-12  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert (exec_with_timeout): reducing the total timeout by each execution
+	* check_ssl_cert (check_attr): check chiphers with nmap
+
 	* check_ssl_cert (check_ocsp): looping over all the supplied URIs
 
 2021-03-11  Matteo Corti  <matteo@corti.li>
